save arezzo files

--- a/kddworkshop/index.html
+++ b/kddworkshop/index.html
@@ -72,6 +72,12 @@ a {
         <p >August 24, 2014 </a></p>
          <p><a href="https://www.google.com/maps/preview?ie=UTF-8&fb=1&gl=us&cid=12649675258885364599&q=bloomberg+building&ei=Z7_mU67VLpORyASi5YDwDg&ved=0CKABEPwSMAs">Bloomberg Headquarters</a></p>
         <p><a href="http://www.kdd.org/kdd2014/registration.html" class="btn btn-primary btn-lg" role="button">Register Now!</a></p>
+        <p class="small" style="
+    font-size: 85%;
+    padding-top: 0;
+    margin-top: -10px;
+">Registration is free if you're only attending this workshop</p>
+
 
       </div>
 
