save arezzo files

--- a/kddworkshop/index.html
+++ b/kddworkshop/index.html
@@ -178,7 +178,7 @@ The KDD 2014 Data Science for Social Good workshop is aimed at starting a conver
               </tr>
               <tr>
                 <td>4:00-5:00</td>
-                <td>Invited Panel: Matchmaking between Data Scientists and Social Problems &amp; Organizations</td> 
+                <td><b>Invited Panel</b>: Matchmaking between Data Scientists and Social Problems &amp; Organizations</td> 
                 <td><b>Panelists:</b><br>
                   Chaitanya Baru (San Diego Supercomputer Center / NSF)<br>
                   Alaina Harkness (MacArthur Foundation)<br>
