Updated front page

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@ layout: default
     </h2>
     <p></p>
     <p>Meet the <a href="people/">2014 Fellows and Mentors</a>!</p>
-    <p>Today at DSSG: Discussing how to present our work this summer.</p>
-    <img src="/img/front/presentations.jpg">
+    <p>Last Night at DSSG: Fellow Ben Green presents City of Memphis distressed neighborhood data at Open Gov Hack Night</p>
+    <img src="/img/front/hacknight-memphis.JPG">
     <p></p>
     <p><a href="http://eepurl.com/zNWrT">Join our mailing list</a> if you want to attend events over the summer 
     <br><a href="mailto:datascifellows@gmail.com">Get in touch with us</a> if you want to work with us as a Post-doc, Student, or Project Partner.</p>
