Added interns to people page

--- a/people/index.html
+++ b/people/index.html
@@ -470,7 +470,15 @@
       <h6>Rob Mitchum</h6>
       <p>Staff science writer for the Computation Institute</p>
     </div>
-    
+    <div class="span4">
+      <img src="/img/people/aditya.jpg" alt="Aditya Kundu"></a>
+      <h6>Aditya Kundu</h6>
+    </div>
+    <div class="span4">
+      <img src="/img/people/peter.jpg" alt="Peter Gao"></a>
+      <h6>Peter Gao</h6>
+    </div>
+
   </div>
 
 
