added clip to media page

--- a/media/index.html
+++ b/media/index.html
@@ -49,6 +49,8 @@ How data science is helping charities save lives and their budgets</a>
 . Venture Beat - June 14, 2014</p>
 <p><a href="https://soundcloud.com/techshift/tech-shift-using-data-science-for-common-good">Using data science for common good</a>
 . WBEZ Tech Shift - July 30, 2014</p>
+<p><a href="http://www.newscientist.com/article/mg22329814.400-machine-predicts-heart-attacks-4-hours-before-doctors.html">Machine predicts heart attacks 4 hours before doctors</a>
+. New Scientist - August 11, 2014</p>
 </div>
 
 
