--- a/kddworkshop/index.html
+++ b/kddworkshop/index.html
@@ -164,7 +164,7 @@ The KDD 2014 Data Science for Social Good workshop is aimed at starting a conver
                 <td>2:00-3:30</td>
                 <td><b>Invited Panel</b>: Success Stories in Applying Data Science for Social Good</td> 
                 <td><b>Panelists:</b><br>Zico Kolter (Carnegie Mellon University)<br>
-                  Daniel Neil (Carnegie Mellon University)<br>
+                  Daniel Neill (Carnegie Mellon University)<br>
                   Vipin Kumar (University of Minnesota) <br>
                   Sendhil Mullainathan (Harvard)<br>
                   Bharat Rao (Deloitte)<br>
