--- a/kddworkshop/index.html
+++ b/kddworkshop/index.html
@@ -180,7 +180,7 @@ The KDD 2014 Data Science for Social Good workshop is aimed at starting a conver
                 <td>4:00-5:00</td>
                 <td><b>Invited Panel</b>: Matchmaking between Data Scientists and Social Problems &amp; Organizations</td> 
                 <td><b>Panelists:</b><br>
-                  Chaitanya Baru (San Diego Supercomputer Center / NSF)<br>
+                  Jake Garcia (Foundation Center)<br>
                   Alaina Harkness (MacArthur Foundation)<br>
                   Todd Leen (NSF)<br>
                   <b>Moderator</b>: <br>Rayid Ghani (University of Chicago &amp; Edgeflip)</td>
