--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@ layout: default
     </h2>
     <p></p>
     <p>Meet the <a href="people/">2014 Fellows and Mentors</a>!</p>
-    <p>Today at DSSG: Fellow Matt Conway presents City of Memphis distressed neighborhood data at the <a href="http://signup.unblight.org/">Unblight Unconference</a> in Macon, GA</p>
-    <img src="/img/front/unblightday2.JPG">
+    <p>Last Night: Standing room only presentations at our 2014 Data Fair!</p>
+    <img src="/img/front/datafair-wide.jpg">
     <p></p>
     <p><a href="http://eepurl.com/zNWrT">Join our mailing list</a> if you want to attend events over the summer 
     <br><a href="mailto:datascifellows@gmail.com">Get in touch with us</a> if you want to work with us as a Post-doc, Student, or Project Partner.</p>
