--- a/contact/index.html
+++ b/contact/index.html
@@ -38,8 +38,8 @@ layout: default
   		<h3>Fellows</h3>
   		<img src="/img/icons/flat-ui-color/Bulb@2x.png" alt="Fellows">
   		<p>Want to come to Chicago to tackle social problems with your analytical, data, and coding skills?</p>
-  		<a href="http://eepurl.com/zNWrT"  class="btn btn-huge btn-info btn-block btn-embossed">Get Notified when Applications Open</a>
-  		<p>Deadline: February 1, 2015</p>
+  		<a href="http://eepurl.com/zNWrT"  class="btn btn-huge btn-info btn-block btn-embossed">Get Notified when Applications Open!</a>
+  		<p>Application Deadline will be February 1, 2015</p>
   	</div>
   	<div class="span4 alert">
   		<h3>Mentors</h3>
