--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@ layout: default
     <p>Last Night: Standing room only presentations at our 2014 Data Fair!</p>
     <img src="/img/front/datafair-wide.jpg">
     <p></p>
-    <p><a href="http://eepurl.com/zNWrT">Join our mailing list</a> if you want to attend events over the summer 
-    <br><a href="mailto:datascifellows@gmail.com">Get in touch with us</a> if you want to work with us as a Post-doc, Student, or Project Partner.</p>
+    <p><a href="http://eepurl.com/zNWrT">Join our mailing list</a> to get notified when applications for 2015 open up.
+    <br><a href="mailto:datascifellows@gmail.com">Get in touch with us</a> if you want to work with us as a Post-doc, Student, or Project Partner before Summer 2015</p>
   </div>
 </div>
 
