--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ layout: default
         <div class="span4">
           <img src="/img/people/ghanig.jpg" alt="Rayid Ghani">
           <h6>Rayid Ghani</h6>
-          <p>Currently at University of Chicago, former Chief Scientist of 2012 Obama campaign</p>
+          <p>Director - Center for Data Science and Public Policy, Computation Institute & Harris School of Public Policy, University of Chicago. Former Chief Scientist of 2012 Obama campaign</p>
           <div class="icons">
             <a href="http://www.twitter.com/rayidghani"><i class="ss-twitter"></i></a>
             <a href="https://www.github.com/rayidghani"><i class="ss-octocat"></i></a>
@@ -110,6 +110,14 @@ layout: default
           </div>
         </div>
         <div class="span4">
+          <img src="http://dssg.uchicago.edu/img/people/means.jpg" alt="Andrew Means">
+          <h6>Andrew Means</h6>
+          <p>Center for Data Science and Public Policy</p>
+          <div class="icons">
+            <a href="http://www.twitter.com/meansandrew"><i class="ss-twitter"></i></a>
+          </div>
+        </div>
+        <div class="span4">
           <img src="/img/people/kusiak-galvin.jpg" alt="Kate Kusiak Galvin">
           <h6>Kate Kusiak Galvin</h6>
           <p>Senior Associate Director of the Urban Center for Computation and Data, University of Chicago</p>
@@ -125,14 +133,7 @@ layout: default
             <a href="http://www.twitter.com/robmitchum"><i class="ss-twitter"></i></a>
           </div>
         </div>
-        <div class="span4">
-          <img src="/img/people/catlett.jpg" alt="Charlie Catlett">
-          <h6>Charlie Catlett</h6>
-          <p>Director of the Urban Center for Computation and Data</p>
-          <div class="icons">
-            <a href="http://www.twitter.com/CeC"><i class="ss-twitter"></i></a>
-          </div>
-        </div>
+        
       </div>
     </div>
   
