--- a/kddworkshop/index.html
+++ b/kddworkshop/index.html
@@ -70,13 +70,8 @@ a {
         <h2>Workshop on Data Science for Social Good</h2>
         <p >Held in conjunction with <a href="http://www.kdd.org/kdd2014/">KDD 2014</a></p>
         <p >August 24, 2014 </a></p>
-         <p><a href="https://www.google.com/maps/preview?ie=UTF-8&fb=1&gl=us&cid=12649675258885364599&q=bloomberg+building&ei=Z7_mU67VLpORyASi5YDwDg&ved=0CKABEPwSMAs">Bloomberg Headquarters</a></p>
-        <p><a href="http://www.kdd.org/kdd2014/registration.html" class="btn btn-primary btn-lg" role="button">Register Now!</a></p>
-        <p class="small" style="
-    font-size: 85%;
-    padding-top: 0;
-    margin-top: -10px;
-">Registration is free if you're only attending this workshop</p>
+         <p><a href="https://www.google.com/maps/preview?ie=UTF-8&fb=1&gl=us&cid=12649675258885364599&q=bloomberg+building&ei=Z7_mU67VLpORyASi5YDwDg&ved=0CKABEPwSMAs">Bloomberg Headquarters (731 Lexington Ave) </a></p>
+        <p>THe workshop will be held in <b>Room 7E MPR</b></a>
 
 
       </div>
