--- a/kddworkshop/index.html
+++ b/kddworkshop/index.html
@@ -71,7 +71,9 @@ a {
         <p >Held in conjunction with <a href="http://www.kdd.org/kdd2014/">KDD 2014</a></p>
         <p >August 24, 2014 </a></p>
          <p><a href="https://www.google.com/maps/preview?ie=UTF-8&fb=1&gl=us&cid=12649675258885364599&q=bloomberg+building&ei=Z7_mU67VLpORyASi5YDwDg&ved=0CKABEPwSMAs">Bloomberg Headquarters (731 Lexington Ave) </a></p>
-        <p> Update: The workshop will be held in <b>Room 7E MPR</b></a><p>
+        <p style="
+    color: rgb(255, 209, 23);
+"> Update: The workshop will be held in <b>Room 7E MPR</b></p> Update: The workshop will be held in <b>Room 7E MPR</b></a><p>
         <p> This workshop will also appear as the Data Science &  Policy Track in the KDD at Bloomberg Program</p>
 
 
