--- a/kddworkshop/index.html
+++ b/kddworkshop/index.html
@@ -104,7 +104,7 @@ The KDD 2014 Data Science for Social Good workshop is aimed at starting a conver
 <a name="schedule"></a>
 <div class="page-header">
         <h1>Schedule </h1>
-        <h3> The entire workshop will take place in Room 7E MBR in the Bloomberg Building.</h3>
+        <h3> The entire workshop will take place in Room 7E MPR in the Bloomberg Building.</h3>
       
       <p>
       <div class="row">
