--- a/kddworkshop/index.html
+++ b/kddworkshop/index.html
@@ -175,6 +175,7 @@ The KDD 2014 Data Science for Social Good workshop is aimed at starting a conver
                 <td><b>Invited Panel</b>: Matchmaking between Data Scientists and Social Problems &amp; Organizations</td> 
                 <td><b>Panelists:</b><br>
                   Jake Garcia (Foundation Center)<br>
+                  Daniel Goroff (Sloan Foundation)<br>
                   Alaina Harkness (MacArthur Foundation)<br>
                   Todd Leen (NSF)<br>
                   <b>Moderator</b>: <br>Rayid Ghani (University of Chicago &amp; Edgeflip)</td>
@@ -206,7 +207,7 @@ The KDD 2014 Data Science for Social Good workshop is aimed at starting a conver
 <li>Topic Modeling Official Secrecy. Matthew Connelly (Columbia), Thomas Nyberg (Columbia), Daniel Krasner (Kfit), David Allen (Columbia), Ian Langmore (Google)
 <li>Experimentation Standards for Crisis Informatics. Fernando Diaz (Microsoft)
 <li>Real-time Topic Models for Crisis Counseling. Karthik Dinakar (MIT), Allison Chaney (Princeton University), Henry Lieberman (MIT), David Blei (Princeton University).
-<li>Tracking Climate Change Opinions from Twitter Data. Jennifer Dy (Northeastern University), Xiaoran An (Northeastern University), Auroop Ganguly, Yi Fang (Santa Clara University), Steven Scyphers (Northeastern University), Ann Hunter (Northeastern University)
+<li>Tracking Climate Change Opinions from Twitter Data. Xiaoran An (Northeastern University), Auroop Ganguly, Yi Fang (Santa Clara University), Steven Scyphers (Northeastern University), Ann Hunter (Northeastern University), Jennifer Dy (Northeastern University).
 <li>Evaluating Unlabeled Spatio-Temporal Patterns: A Global Ocean Eddy Monitoring Application. James Faghmous (University of Minnesota), Hung Nguyen (University of Minnesota), Snigdhansu Chaterjee (University of Minnesota), Vipin Kumar (University of Minnesota).
 <li>Crowdsourcing Land Use Maps via Twitter. Vanessa Frias-Martinez (University of Maryland), Enrique Frias-Martinez (Telefonica Research).
 <li>Smarter Crisis Crowdsourcing. Kayla Jacobs (Technion), Kwang-Sung Jun (University of Wisconsin), Nathan Leiby (Clever), Elena Eneva (Accenture)
