--- a/projects/index.html
+++ b/projects/index.html
@@ -10,16 +10,16 @@ published: true
     <hr>
   </h2>	
   <p>
-  	During the  program, our fellows  work on data science projects in health, education, energy, transportation, and more.
+  	During the  program, our fellows work on data science projects in healthcare, education, energy, transportation, and more.
   </p>
    <p> 
-  	Our program is intensive and hands-on. Fellows  work directly with <strong>nonprofits</strong>, <strong>local governments</strong>, and <strong>federal agencies</strong>, learning about what they do and tackling data problems they face.
+  	Our program is intensive and hands-on. Fellows work directly with <strong>nonprofits</strong>, <strong>local governments</strong>, and <strong>federal agencies</strong>, learning about what they do and tackling data problems they face.
   </p>
   <p>
   	We're strong believers in open knowledge and open source. We blog extensively about our projects, and make much of our research and code open to everyone.
   </p>
   <p>
-    We will post more detailed project descriptions soon. You can find our 2013 projects <a href="/projects/2013">here</a>.
+  You can find our 2013 projects <a href="/projects/2013">here</a>.
   </p>
 
   <!-- Iterate through projects and display info -->
