--- a/projects/index-new.html
+++ b/projects/index-new.html
@@ -30,19 +30,12 @@ published: true
     {% if post.type == 'org14' %}   
     <div class="span3 projectbox">
       <h3>{{ post.project }}</h3>
-      {% for org in post.org %}
-            <!-- Fetch the right partner url using current loop index-->
-            <a href="{{ post.website[forloop.index0] }}">{{ org }}</a>
-            <!-- Add comma after org name, unless last org in partner list -->
-            {% if forloop.last != true %}
-              ,
-            {% endif %} 
-          {% endfor %}<p>
+    <p>
 
       {% for img in post.img %}
               <!-- Fetch the right image link as you loop through partner logos -->
               <a href="{{ post.website[forloop.index0] }}">            
-              <img src="/img/partners/{{ img }}">
+              <img src="/img/partners/{{ img }}" width=100px>
               </a>
             {% endfor %}
     </div>
