--- a/projects/index-new.html
+++ b/projects/index-new.html
@@ -29,7 +29,7 @@ published: true
   {% for post in site.posts %}
     {% if post.type == 'org14' %}   
     <div class="span3 projectbox">
-      <h3>{{ post.project }}</h3>
+      <h3 style="font-size: 20px; margin-bottom: 16px;">{{ post.project }}</h3>
     <p>
 
       {% for img in post.img %}
