--- a/projects/index-new.html
+++ b/projects/index-new.html
@@ -23,7 +23,7 @@ published: true
   </p>
 
 
-    <div id="projects" class="row">
+    <div id="projects" class="row spacer">
 
      <!-- Iterate through projects and display info -->
   {% for post in site.posts %}
