--- a/kddworkshop/index.html
+++ b/kddworkshop/index.html
@@ -177,7 +177,7 @@ The KDD 2014 Data Science for Social Good workshop is aimed at starting a conver
                   Jake Garcia (Foundation Center)<br>
                   Daniel Goroff (Sloan Foundation)<br>
                   Alaina Harkness (MacArthur Foundation)<br>
-                  Todd Leen (NSF)<br>
+                  Todd Leen (NSF) <a href="papers/NSF_CISE_DataScienceForSocialGood_2014.pdf">[slides]</a><br>
                   <b>Moderator</b>: <br>Rayid Ghani (University of Chicago &amp; Edgeflip)</td>
               </tr>
               <tr>
