--- a/kddworkshop/index.html
+++ b/kddworkshop/index.html
@@ -79,7 +79,7 @@ a {
         <h1>Overview</h1>
       
       <p>
-        Social Good organizations such as Non-profits and Governments have started to realize the value of data-driven decision-making. Many of them have started collecting better (and more) data. They are starting to investigate how data can be used make decisions. The challenge they now face is a lack of resources (both people and tools) to turn that initial interest into action. There is an urgent need to take this enthusiasm and interest from non-profits and government organizations and jumpstart efforts to help them along this path.
+        Social Good organizations such as Non-profits, Governments, and Social Enterprises have started to realize the value of data-driven decision-making. Many of them have started collecting better (and more) data. They are starting to investigate how data can be used make decisions. The challenge they now face is a lack of resources (both people and tools) to turn that initial interest into action. There is an urgent need to take this enthusiasm and interest from non-profits and government organizations and jumpstart efforts to help them along this path.
 
         <p>In order for data science to be used effectively for social good, three things need to happen: </p>
             <ol>    <li>
