--- a/kddworkshop/index.html
+++ b/kddworkshop/index.html
@@ -197,35 +197,35 @@ The KDD 2014 Data Science for Social Good workshop is aimed at starting a conver
         <h1>Accepted Papers</h1>
       
       <ul>
-     <li>Harnessing Craigslist Personal Ads to Inform Federal HIV Prevention Funding. Varoon Bashyakarla (Yale University), Claire Kelley,  Allen Lin (Harvard University)
-<li>Probabilistic Soft Logic for Social Good. Stephen Bach (University of Maryland), Bert Huang, Lise Getoor (UCSC)
-<li>Calling for Better Measurement: Estimating an Individual's Wealth and Well-Being from Mobile Phone Transaction Records. Joshua Blumenstock (University of Washington)
-<li>Data Analytics for Energy Efficiency: Opportunities and Challenges. Shyam Boriah (FirstFuel Software), Badri Raghavan.
-<li>A Case Study on Fundraising Analytics at Memorial Sloan Kettering Cancer Center. Kathryn Chamberlin (Memorial Sloan Kettering)
-<li>Data Science and the Policy Completion Problem. Sanjay Chawla (University of Sydney), Federico Girosi (University of Western Sydney), Fei Wang (University of Sydney).
-<li>An Approach to Analyze Web Privacy Policy Documents. Parvathi Chundi (University of Nebraska); Pranav Subramaniam (Millard North High School, Omaha, NE)
-<li>Topic Modeling Official Secrecy. Matthew Connelly (Columbia), Thomas Nyberg (Columbia), Daniel Krasner (Kfit), David Allen (Columbia), Ian Langmore (Google)
-<li>Experimentation Standards for Crisis Informatics. Fernando Diaz (Microsoft)
-<li>Real-time Topic Models for Crisis Counseling. Karthik Dinakar (MIT), Allison Chaney (Princeton University), Henry Lieberman (MIT), David Blei (Princeton University).
-<li>Tracking Climate Change Opinions from Twitter Data. Xiaoran An (Northeastern University), Auroop Ganguly, Yi Fang (Santa Clara University), Steven Scyphers (Northeastern University), Ann Hunter (Northeastern University), Jennifer Dy (Northeastern University).
-<li>Evaluating Unlabeled Spatio-Temporal Patterns: A Global Ocean Eddy Monitoring Application. James Faghmous (University of Minnesota), Hung Nguyen (University of Minnesota), Snigdhansu Chaterjee (University of Minnesota), Vipin Kumar (University of Minnesota).
-<li>Crowdsourcing Land Use Maps via Twitter. Vanessa Frias-Martinez (University of Maryland), Enrique Frias-Martinez (Telefonica Research).
-<li>Smarter Crisis Crowdsourcing. Kayla Jacobs (Technion), Kwang-Sung Jun (University of Wisconsin), Nathan Leiby (Clever), Elena Eneva (Accenture)
-<li>Follow the $$$: Networks and Flows of Disaster Recovery Funding. Rupinder Paul Khandpur (Virginia Tech), Naren Ramakrishnan (Virginia Tech), James Bohland (Virginia Tech)
-<li>Exploring Clinical Care Processes Using Visual and Data Analytics: Challenges and Opportunities. Vikas Kumar (Georgia Tech), Hyunwoo Park, Rahul Basole, Mark Braunstein, Minsuk Kahng, Duen Horng Chau, Daniel Hirsh, Nicoleta Serban, James Bost, Burton Lesnick, Beth Schissel, Acar Tamersoy, Michael Thompson.
-<li>A Graph-based Approach to Clustering and Matching Providers Across Disparate Healthcare Datasets. Sangkeun Lee (Oak Ridge National Laboratory).
-<li>An interpretable model for stroke prediction using rules and Bayesian analysis. Ben Letham (MIT), Cynthia Rudin (MIT), Tyler McCormick (University of Washington), David Madigan (Columbia University).
-<li>Synthesis of Nutrition and Price Data Across Supermarket Retailers. Christian Pecaut (Harris School of Public Policy, University of Chicago).
-<li>RFID Based Biometrics Analysis Over Cloud. Faisal Rahman (UTD Data Mining Lab), Mohiuddin  Solaimani (University of Texas at Dallas), Latifur  Khan (University of Texas at Dallas)
-<li>Data-driven Modeling in the Social Sciences - A pragmatic approach for policy-makers. Shyam Ranganathan (Uppsala University), Viktoria Spaiser (Institute for Futures Studies, Sweden), Stamatios Nicolis (Uppsala University) Ranjula Bali Swain (Uppsala University), David Sumpter (Uppsala University).
-<li>Readmissions Score as a Service(RaaS). Vivek Rao, Kiyana Zolfaghar, David Hazel, Vani Mandava, Senjuti Basu Roy, Ankur Teredesai.
-<li>Finding Patterns with a Rotten Core: Data Mining for Crime Series with Core Sets. Cynthia Rudin (MIT), Tong Wang (MIT), Daniel Wagner (Cambridge Police Department),  Rich Seveiri (Cambridge Police Department).
-<li>Data Science for Public Policy: Of the people, for the people, by the people 2.0 ?. Sreenivas Sukumar (ORNL)
-<li>Machine learning in the Big Data era:  Are we there yet?. Sreenivas Sukumar (ORNL)
-<li>Efficient and Tailor-made Anonymization for Relational and Transactional Medical Records. Tsubasa Takahashi (NEC Corporation), Koji Sobataka, Takuya Mori.
-<li>Big Data for Positive Social Change: An LMIC Perspective. Linnet Taylor (Institute for Social Science Research, University of Amsterdam), Josh Cowls (Oxford Internet Institute), Ralph Schroeder (Oxford Internet Institute).
-<li>Using Large-scale Open Source Data to Identify Potential Forced Migration. Yifang Wei,  Abbie Taylor,  Nili Yossinger, Eleanor Swingewood, Dennis Quinn,  Susan Martin,  Susan McGrath,  Jeff Collmann, Sidney Berkowitz, Lisa Singh (Georgetown University).
-<li>Hyper Sequence Pattern Mining on ADLs. Xinran Yu (UTSA).
+  <li><a href="papers/dy.pdf">Tracking Climate Change Opinions from Twitter Data</a>. Xiaoran An (Northeastern University), Auroop Ganguly, Yi Fang (Santa Clara University), Steven Scyphers (Northeastern University), Ann Hunter (Northeastern University), Jennifer Dy (Northeastern University).
+ <li><a href="papers/bach.pdf">Probabilistic Soft Logic for Social Good. Stephen Bach (University of Maryland), Bert Huang, Lise Getoor (UCSC)
+<li>Calling for Better Measurement: Estimating an Individual's Wealth and Well-Being from Mobile Phone Transaction Records</a>. Joshua Blumenstock (University of Washington)
+     <li><a href="papers/bashyakarla.pdf">Harnessing Craigslist Personal Ads to Inform Federal HIV Prevention Funding</a>. Varoon Bashyakarla (Yale University), Claire Kelley,  Allen Lin (Harvard University)
+ <li><a href="papers/boriah.pdf">Data Analytics for Energy Efficiency: Opportunities and Challenges</a>. Shyam Boriah (FirstFuel Software), Badri Raghavan.
+ <li><a href="papers/chamberlain.pdf">A Case Study on Fundraising Analytics at Memorial Sloan Kettering Cancer Center</a>. Kathryn Chamberlin (Memorial Sloan Kettering)
+ <li><a href="papers/chawla.pdf">Data Science and the Policy Completion Problem</a>. Sanjay Chawla (University of Sydney), Federico Girosi (University of Western Sydney), Fei Wang (University of Sydney).
+ <li><a href="papers/chundi.pdf">An Approach to Analyze Web Privacy Policy Documents</a>. Parvathi Chundi (University of Nebraska); Pranav Subramaniam (Millard North High School, Omaha, NE)
+ <li><a href="papers/connelly.pdf">Topic Modeling Official Secrecy</a>. Matthew Connelly (Columbia), Thomas Nyberg (Columbia), Daniel Krasner (Kfit), David Allen (Columbia), Ian Langmore (Google)
+ <li><a href="papers/diaz.pdf">Experimentation Standards for Crisis Informatics</a>. Fernando Diaz (Microsoft)
+ <li><a href="papers/dinakar.pdf">Real-time Topic Models for Crisis Counseling</a>. Karthik Dinakar (MIT), Allison Chaney (Princeton University), Henry Lieberman (MIT), David Blei (Princeton University).
+ <li><a href="papers/faghmous.pdf">Evaluating Unlabeled Spatio-Temporal Patterns: A Global Ocean Eddy Monitoring Application</a>. James Faghmous (University of Minnesota), Hung Nguyen (University of Minnesota), Snigdhansu Chaterjee (University of Minnesota), Vipin Kumar (University of Minnesota).
+ <li><a href="papers/frias.pdf">Crowdsourcing Land Use Maps via Twitter</a>. Vanessa Frias-Martinez (University of Maryland), Enrique Frias-Martinez (Telefonica Research).
+ <li><a href="papers/jacobs.pdf">Smarter Crisis Crowdsourcing</a>. Kayla Jacobs (Technion), Kwang-Sung Jun (University of Wisconsin), Nathan Leiby (Clever), Elena Eneva (Accenture)
+ <li><a href="papers/khandpur.pdf">Follow the $$$: Networks and Flows of Disaster Recovery Funding</a>. Rupinder Paul Khandpur (Virginia Tech), Naren Ramakrishnan (Virginia Tech), James Bohland (Virginia Tech)
+ <li><a href="papers/kumar.pdf">Exploring Clinical Care Processes Using Visual and Data Analytics: Challenges and Opportunities</a>. Vikas Kumar (Georgia Tech), Hyunwoo Park, Rahul Basole, Mark Braunstein, Minsuk Kahng, Duen Horng Chau, Daniel Hirsh, Nicoleta Serban, James Bost, Burton Lesnick, Beth Schissel, Acar Tamersoy, Michael Thompson.
+ <li><a href="papers/lee.pdf">A Graph-based Approach to Clustering and Matching Providers Across Disparate Healthcare Datasets</a>. Sangkeun Lee (Oak Ridge National Laboratory).
+ <li><a href="papers/letham.pdf">An interpretable model for stroke prediction using rules and Bayesian analysis</a>. Ben Letham (MIT), Cynthia Rudin (MIT), Tyler McCormick (University of Washington), David Madigan (Columbia University).
+ <li><a href="papers/pecaut.pdf">Synthesis of Nutrition and Price Data Across Supermarket Retailers</a>. Christian Pecaut (Harris School of Public Policy, University of Chicago).
+ <li><a href="papers/rahman.pdf">RFID Based Biometrics Analysis Over Cloud</a>. Faisal Rahman (UTD Data Mining Lab), Mohiuddin  Solaimani (University of Texas at Dallas), Latifur  Khan (University of Texas at Dallas)
+ <li><a href="papers/ranganathan.pdf">Data-driven Modeling in the Social Sciences - A pragmatic approach for policy-makers</a>. Shyam Ranganathan (Uppsala University), Viktoria Spaiser (Institute for Futures Studies, Sweden), Stamatios Nicolis (Uppsala University) Ranjula Bali Swain (Uppsala University), David Sumpter (Uppsala University).
+ <li><a href="papers/rao.pdf">Readmissions Score as a Service(RaaS)</a>. Vivek Rao, Kiyana Zolfaghar, David Hazel, Vani Mandava, Senjuti Basu Roy, Ankur Teredesai.
+ <li><a href="papers/rudin.pdf">Finding Patterns with a Rotten Core: Data Mining for Crime Series with Core Sets</a>. Cynthia Rudin (MIT), Tong Wang (MIT), Daniel Wagner (Cambridge Police Department),  Rich Seveiri (Cambridge Police Department).
+ <li><a href="papers/sukumar.pdf">Data Science for Public Policy: Of the people, for the people, by the people 2.0 ?</a>. Sreenivas Sukumar (ORNL)
+ <li><a href="papers/sukumar2.pdf">Machine learning in the Big Data era:  Are we there yet?</a>. Sreenivas Sukumar (ORNL)
+ <li><a href="papers/takahashi.pdf">Efficient and Tailor-made Anonymization for Relational and Transactional Medical Records</a>. Tsubasa Takahashi (NEC Corporation), Koji Sobataka, Takuya Mori.
+ <li><a href="papers/.pdf">Big Data for Positive Social Change: An LMIC Perspective</a>. Linnet Taylor (Institute for Social Science Research, University of Amsterdam), Josh Cowls (Oxford Internet Institute), Ralph Schroeder (Oxford Internet Institute).
+ <li><a href="papers/wei.pdf">Using Large-scale Open Source Data to Identify Potential Forced Migration</a>. Yifang Wei,  Abbie Taylor,  Nili Yossinger, Eleanor Swingewood, Dennis Quinn,  Susan Martin,  Susan McGrath,  Jeff Collmann, Sidney Berkowitz, Lisa Singh (Georgetown University).
+ <li><a href="papers/yu.pdf">Hyper Sequence Pattern Mining on ADLs</a>. Xinran Yu (UTSA).
     </ul>
   </div>
 
