--- a/kddworkshop/index.html
+++ b/kddworkshop/index.html
@@ -198,7 +198,7 @@ The KDD 2014 Data Science for Social Good workshop is aimed at starting a conver
       
       <ul>
   <li><a href="papers/dy.pdf">Tracking Climate Change Opinions from Twitter Data</a>. Xiaoran An (Northeastern University), Auroop Ganguly, Yi Fang (Santa Clara University), Steven Scyphers (Northeastern University), Ann Hunter (Northeastern University), Jennifer Dy (Northeastern University).
- <li><a href="papers/bach.pdf">Probabilistic Soft Logic for Social Good. Stephen Bach (University of Maryland), Bert Huang, Lise Getoor (UCSC)
+ <li><a href="papers/bach.pdf">Probabilistic Soft Logic for Social Good</a>. Stephen Bach (University of Maryland), Bert Huang, Lise Getoor (UCSC)
 <li>Calling for Better Measurement: Estimating an Individual's Wealth and Well-Being from Mobile Phone Transaction Records</a>. Joshua Blumenstock (University of Washington)
      <li><a href="papers/bashyakarla.pdf">Harnessing Craigslist Personal Ads to Inform Federal HIV Prevention Funding</a>. Varoon Bashyakarla (Yale University), Claire Kelley,  Allen Lin (Harvard University)
  <li><a href="papers/boriah.pdf">Data Analytics for Energy Efficiency: Opportunities and Challenges</a>. Shyam Boriah (FirstFuel Software), Badri Raghavan.
