--- a/2013.html
+++ b/2013.html
@@ -43,7 +43,7 @@ layout: default
   <div id="blog" class="row section">
         <h3>Blog</h3>
         <hr>
-        <p>Read our blog to follow the fellowship and learn about our projects.
+        <p>Baca blog kami to follow the fellowship and belajar tentang blog kami.
         {% for post in site.posts limit:10 %}
           {% unless post.type == 'org' or post.type == 'event' %}
             <article>
